[gd_scene load_steps=14 format=3 uid="uid://dda7h8b46rvfn"]

[ext_resource type="Script" path="res://Scripts/Menus/main_menu.gd" id="1_bk668"]
[ext_resource type="Material" uid="uid://e58sm3dscnsb" path="res://Assets/Shaders/crt_shader.material" id="1_w0ku4"]
[ext_resource type="FontFile" uid="uid://ckg6xhwdilxv" path="res://Assets/Fonts/Starbirl.otf" id="2_0bc8r"]
[ext_resource type="Texture2D" uid="uid://drht76nnah1j" path="res://Assets/Backgrounds/menu-gradient.jpg" id="3_fqtet"]
[ext_resource type="AudioStream" uid="uid://d2vkdyp8h4slx" path="res://Assets/Sounds/tv_on.mp3" id="5_drsct"]
[ext_resource type="AudioStream" uid="uid://cjw26esk3hpus" path="res://Assets/Sounds/tv_off.mp3" id="6_tdcay"]

[sub_resource type="Theme" id="Theme_ttqu0"]
default_font = ExtResource("2_0bc8r")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vjd5v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwugb"]
bg_color = Color(0.913725, 0.490196, 0.886275, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pw04e"]
bg_color = Color(0.913725, 0.490196, 0.886275, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_03lrb"]
bg_color = Color(0.913725, 0.831373, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7xhif"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_owt4w"]

[node name="MainMenu" type="ColorRect"]
material = ExtResource("1_w0ku4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bk668")

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_fqtet")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -187.5
offset_right = 210.0
offset_bottom = 187.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ttqu0")
theme_override_constants/separation = 24
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
show_behind_parent = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_vjd5v")
theme_override_styles/hover = SubResource("StyleBoxFlat_xwugb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pw04e")
theme_override_styles/normal = SubResource("StyleBoxFlat_03lrb")
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
show_behind_parent = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_7xhif")
theme_override_styles/hover = SubResource("StyleBoxFlat_xwugb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pw04e")
theme_override_styles/normal = SubResource("StyleBoxFlat_03lrb")
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
show_behind_parent = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_owt4w")
theme_override_styles/hover = SubResource("StyleBoxFlat_xwugb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pw04e")
theme_override_styles/normal = SubResource("StyleBoxFlat_03lrb")
text = "Exit
"

[node name="Title" type="Label" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -496.5
offset_top = 100.0
offset_right = 496.5
offset_bottom = 179.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.552941, 0.733333, 0.898039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("2_0bc8r")
theme_override_font_sizes/font_size = 75
text = "Radio Rideshare"

[node name="StartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_drsct")
autoplay = true
mix_target = 1

[node name="ExitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tdcay")
mix_target = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
